--- a/ui/customer/licenses.html
+++ b/ui/customer/licenses.html
@@ -393,6 +393,7 @@ input[type="email"] {
     <button class="tab" data-tab="devices">Devices</button>
     <button class="tab" data-tab="analytics">Analytics</button>
     <button class="tab" data-tab="cdr">CDR</button>
+     <button class="tab" data-tab="pstn">PSTN</button>
   </div>
 
   <!-- ============================= -->
